# Test_cours

./: .nojekyll  README.md  _quarto.yml  index.html  index.qmd  init.sh  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build_website.yml
chapters/: chapter1.html  chapter1.qmd
notebooks/: notebook1.ipynb  notebook1.qmd
sspcloud/: download_data.sh  download_notebook.sh  init-trainees.sh  restore_environment.sh
